--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
                     <includes>
                         <include>**/*Tests.java</include>
                     </includes>
+                    <argLine>-Xmx2048m</argLine>
                 </configuration>
             </plugin>
         </plugins>
